diffuse_ramp closures of OSL scripts are not rendered (2.80) #63346

Closed
opened 2019-04-06 22:28:59 +02:00 by QF Qin · 3 comments

System Information
Operating system: Windows 10 & Mac OS
Graphics card: Cycles CPU mode & GPU mode with GTX 1060

Blender Version
Broken: 2.80, Date: 2019-04-02 14:00, Hash: d986b04bd3
Worked: 2.79, 2.79b

Short description of error
compare.png
I enabled OSL in Cycles and wrote a script simply calling diffuse_ramp(N, colors- [x]). Though it is displayed correctly in the viewport, it cannot be rendered. The same script works as expected in Blender 2.79. And the same problem does not occur for other closure functions (e.g., diffuse, oren_nayar, diffuse_toon...).

Exact steps for others to reproduce the error

  1. Choose Cycles as render engine, and enable OSL.
  2. Select any mesh, then in the Shader Editor, add and link the script node to the material surface output.
    (The script and node configuration are attached.)
    ramp_test.osl
    node.png
**System Information** Operating system: Windows 10 & Mac OS Graphics card: Cycles CPU mode & GPU mode with GTX 1060 **Blender Version** Broken: 2.80, Date: 2019-04-02 14:00, Hash: d986b04bd302 Worked: 2.79, 2.79b **Short description of error** ![compare.png](https://archive.blender.org/developer/F6915807/compare.png) I enabled OSL in Cycles and wrote a script simply calling **diffuse_ramp(N, colors- [x])**. Though it is displayed correctly in the viewport, it cannot be rendered. The same script works as expected in Blender 2.79. And the same problem does not occur for other closure functions (e.g., diffuse, oren_nayar, diffuse_toon...). **Exact steps for others to reproduce the error** 1. Choose Cycles as render engine, and enable OSL. 2. Select any mesh, then in the Shader Editor, add and link the script node to the material surface output. (The script and node configuration are attached.) [ramp_test.osl](https://archive.blender.org/developer/F6915821/ramp_test.osl) ![node.png](https://archive.blender.org/developer/F6915822/node.png)
Author

Added subscriber: @qfqin

Added subscriber: @qfqin
Brecht Van Lommel was assigned by Sebastian Parborg 2019-04-07 21:07:24 +02:00

This issue was referenced by 6a50a3d140

This issue was referenced by 6a50a3d140d7050dcfa391eb55d5a03720b06f3a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63346
No description provided.