Fix T63346: Cycles OSL shader with closure not working in final render.